package interfaces;

import daugther.Location;

// Интервейс
public interface Story {
    void offer(String a);
    void hope(String a);
    void doThis(String a);
    void goTo(Location l);
    void begin(String a);
    void talk(String a);
}
