package exception;

// Созданный класс ошибки в рамках данного проекта
public class NotFound extends Exception {
    public NotFound(String message) {
        super(message);
    }
}
