@startuml Story
skinparam classAttributeIconSize 0

' ================== ИНТЕРФЕЙС ==================
interface Story {
    offer(String a): void
    hope(String a): void
    doThis(String a): void
    goTo(Location l): void
    begin(String a): void
}

' ================== АБСТРАКТНЫЕ КЛАССЫ ==================
abstract class Object {
    -name : String
    -condition: ItemStatus
    -personStat: PersonStatus
    +getName() : String
    +getCondition() : ItemStatus
    +setCondition(ItemStatus newStat) : void
    +getPersonStat(): PersonStatus
    +setPersonStat(PersonStatus newStat): void
    +toString() : String
}

abstract class Person {
    -name : String
    -status: PersonStatus
    +getName() : String
    +getStatus() : PersonStatus
    +addPerson(String name) : void
    +setStat(PersonStatus newStat) : void
    +toString() : String
}

Object -left- Person


' ================== КОНКРЕТНЫЕ КЛАССЫ ==================
class Human {
    +offer(String a) : void
    +hope(String a) : void
    +doThis(String a) : void
    +goTo(Location l) : void
    +begin(String a) : void
}

Person -down-|> Human
Story -left-> Human: implements

class Item {
    -isMineralFound : boolean
    +goTo(Location l) : void
    +doThis(String a) : void
    +isFound() : void
}

Object --|> Item

class Location {
    +toString(): void
    +getLocation: String
}

Object --|> Location

' ================== ENUM ==================
enum PersonStatus <<enum>> {
    TALK
    DOING
    MOVE
    ALIVE
}

enum ItemStatus <<enum>> {
    SKETCH
    PLAN
    LUNIT
    NOLUNIT
    DUALCONTROL
    SINGLECONTROL
    GRAVITY
    ZEROGRAVITY
    LOCATION
    ELEMENT
}

Person <-right- PersonStatus
Object <-left- PersonStatus
Object <-- ItemStatus

' ================== ИСКЛЮЧЕНИЕ ==================
class NotFound <<exception>> {
    +getMessage() : String
}

Item --> NotFound : throws

@enduml
